# finance-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
config/: agents.yaml  main.yaml
data/rag/UI_Test_KB/: metadata.json
data/rag/테스트 KB/: metadata.json
docs/: ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  INTEGRATION_TEST_SCENARIO.md  NEXT_STEPS.md  PROJECT_STATUS.md  QUICKSTART.md  TODO.md  UI_TEST_SCENARIO.md  VISION.md
docs/examples/: hotelshilla_008770_research_report.md  naver_035420_research_report.md  salesforce_CRM_research_report.md  samsung_005930_research_report.md
scripts/: run_server.py  start_web.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py
src/agents/chat/: agent.py
src/agents/fundamental/: __init__.py  agent.py
src/api/: main.py
src/core/: __init__.py  config.py  errors.py
src/tools/: __init__.py  financials.py  indicators.py  news_search.py  pipeline_tools.py  rag_tool.py  stock_data.py  web_search.py  youtube_tool.py
tests/: test_phase5_agents.py  test_rag_system.py  test_research_pipeline_toolrouter.py  test_web_search.py  test_youtube_tool.py  ui_integration_test_scenarios.md
web/: next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/components/: FileUpload.tsx  ReportViewer.tsx  ResearchProgress.tsx  SentimentAnalysis.tsx  Sidebar.tsx  StockChart.tsx  StockRecommendation.tsx  StockSearchInput.tsx  ValuationAnalysis.tsx  index.ts
web/types/: index.ts
(+86 files in other folders)
